[gd_scene load_steps=42 format=2]

[ext_resource path="res://VarelaRound-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://art/stone_grid.png" type="Texture" id=2]
[ext_resource path="res://art/carpet_auto_tile.png" type="Texture" id=3]
[ext_resource path="res://art/stone_rough.png" type="Texture" id=4]
[ext_resource path="res://art/books_auto_tile.png" type="Texture" id=5]
[ext_resource path="res://art/garden_autotile.png" type="Texture" id=6]
[ext_resource path="res://art/tile.png" type="Texture" id=7]
[ext_resource path="res://art/overpass_horizontal.png" type="Texture" id=8]
[ext_resource path="res://art/overpass_vertical.png" type="Texture" id=9]
[ext_resource path="res://art/light.png" type="Texture" id=10]
[ext_resource path="res://player_anim/player7.png" type="Texture" id=11]
[ext_resource path="res://script/movement.gd" type="Script" id=12]
[ext_resource path="res://player_anim/player6.png" type="Texture" id=13]
[ext_resource path="res://player_anim/player10.png" type="Texture" id=14]
[ext_resource path="res://player_anim/player9.png" type="Texture" id=15]
[ext_resource path="res://player_anim/player1.png" type="Texture" id=16]
[ext_resource path="res://player_anim/player2.png" type="Texture" id=17]
[ext_resource path="res://player_anim/player4.png" type="Texture" id=18]
[ext_resource path="res://player_anim/player3.png" type="Texture" id=19]
[ext_resource path="res://player_anim/player8.png" type="Texture" id=20]
[ext_resource path="res://art/stairs.png" type="Texture" id=21]
[ext_resource path="res://script/garden.gd" type="Script" id=22]
[ext_resource path="res://script/warp.gd" type="Script" id=23]
[ext_resource path="res://script/TextBox.gd" type="Script" id=24]
[ext_resource path="res://player_anim/player_grand.png" type="Texture" id=25]
[ext_resource path="res://art/arrow.png" type="Texture" id=26]
[ext_resource path="res://art/grave.png" type="Texture" id=27]

[sub_resource type="TileSet" id=1]
0/name = "stone_grid.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "stone_rough.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "garden_autotile.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 192, 64 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 144, Vector2( 0, 1 ), 146, Vector2( 0, 2 ), 18, Vector2( 0, 3 ), 16, Vector2( 1, 0 ), 176, Vector2( 1, 1 ), 178, Vector2( 1, 2 ), 50, Vector2( 1, 3 ), 48, Vector2( 2, 0 ), 184, Vector2( 2, 1 ), 186, Vector2( 2, 2 ), 58, Vector2( 2, 3 ), 56, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 154, Vector2( 3, 2 ), 26, Vector2( 3, 3 ), 24, Vector2( 4, 0 ), 187, Vector2( 4, 1 ), 434, Vector2( 4, 2 ), 182, Vector2( 4, 3 ), 250, Vector2( 5, 0 ), 440, Vector2( 5, 1 ), 510, Vector2( 5, 2 ), 447, Vector2( 5, 3 ), 62, Vector2( 6, 0 ), 248, Vector2( 6, 1 ), 507, Vector2( 6, 2 ), 255, Vector2( 6, 3 ), 59, Vector2( 7, 0 ), 190, Vector2( 7, 1 ), 218, Vector2( 7, 2 ), 155, Vector2( 7, 3 ), 442, Vector2( 8, 0 ), 432, Vector2( 8, 1 ), 438, Vector2( 8, 2 ), 446, Vector2( 8, 3 ), 54, Vector2( 9, 0 ), 506, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 511, Vector2( 9, 3 ), 63, Vector2( 10, 0 ), 504, Vector2( 10, 2 ), 443, Vector2( 10, 3 ), 191, Vector2( 11, 0 ), 216, Vector2( 11, 1 ), 251, Vector2( 11, 2 ), 219, Vector2( 11, 3 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "books_auto_tile.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 192, 64 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 144, Vector2( 0, 1 ), 146, Vector2( 0, 2 ), 18, Vector2( 0, 3 ), 16, Vector2( 1, 0 ), 176, Vector2( 1, 1 ), 178, Vector2( 1, 2 ), 50, Vector2( 1, 3 ), 48, Vector2( 2, 0 ), 184, Vector2( 2, 1 ), 186, Vector2( 2, 2 ), 58, Vector2( 2, 3 ), 56, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 154, Vector2( 3, 2 ), 26, Vector2( 3, 3 ), 24, Vector2( 4, 0 ), 187, Vector2( 4, 1 ), 434, Vector2( 4, 2 ), 182, Vector2( 4, 3 ), 250, Vector2( 5, 0 ), 440, Vector2( 5, 1 ), 510, Vector2( 5, 2 ), 447, Vector2( 5, 3 ), 62, Vector2( 6, 0 ), 248, Vector2( 6, 1 ), 507, Vector2( 6, 2 ), 255, Vector2( 6, 3 ), 59, Vector2( 7, 0 ), 190, Vector2( 7, 1 ), 218, Vector2( 7, 2 ), 155, Vector2( 7, 3 ), 442, Vector2( 8, 0 ), 432, Vector2( 8, 1 ), 438, Vector2( 8, 2 ), 446, Vector2( 8, 3 ), 54, Vector2( 9, 0 ), 506, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 511, Vector2( 9, 3 ), 63, Vector2( 10, 0 ), 504, Vector2( 10, 2 ), 443, Vector2( 10, 3 ), 191, Vector2( 11, 0 ), 216, Vector2( 11, 1 ), 251, Vector2( 11, 2 ), 219, Vector2( 11, 3 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=4]
0/name = "carpet_auto_tile.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 192, 64 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 144, Vector2( 0, 1 ), 146, Vector2( 0, 2 ), 18, Vector2( 0, 3 ), 16, Vector2( 1, 0 ), 176, Vector2( 1, 1 ), 178, Vector2( 1, 2 ), 50, Vector2( 1, 3 ), 48, Vector2( 2, 0 ), 184, Vector2( 2, 1 ), 186, Vector2( 2, 2 ), 58, Vector2( 2, 3 ), 56, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 154, Vector2( 3, 2 ), 26, Vector2( 3, 3 ), 24, Vector2( 4, 0 ), 187, Vector2( 4, 1 ), 434, Vector2( 4, 2 ), 182, Vector2( 4, 3 ), 250, Vector2( 5, 0 ), 440, Vector2( 5, 1 ), 510, Vector2( 5, 2 ), 447, Vector2( 5, 3 ), 62, Vector2( 6, 0 ), 248, Vector2( 6, 1 ), 507, Vector2( 6, 2 ), 255, Vector2( 6, 3 ), 59, Vector2( 7, 0 ), 190, Vector2( 7, 1 ), 218, Vector2( 7, 2 ), 155, Vector2( 7, 3 ), 442, Vector2( 8, 0 ), 432, Vector2( 8, 1 ), 438, Vector2( 8, 2 ), 446, Vector2( 8, 3 ), 54, Vector2( 9, 0 ), 506, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 511, Vector2( 9, 3 ), 63, Vector2( 10, 0 ), 504, Vector2( 10, 2 ), 443, Vector2( 10, 3 ), 191, Vector2( 11, 0 ), 216, Vector2( 11, 1 ), 251, Vector2( 11, 2 ), 219, Vector2( 11, 3 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=5]
radius = 8.0

[sub_resource type="CircleShape2D" id=6]
radius = 8.0

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="CircleShape2D" id=8]
radius = 7.11073

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 11 ), ExtResource( 20 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 18 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 14 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[sub_resource type="TileSet" id=10]
0/name = "overpass_horizontal.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "overpass_vertical.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="DynamicFont" id=11]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="TileSet" id=13]
0/name = "tile.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=14]
radius = 8.0

[node name="garden" type="Node"]
script = ExtResource( 22 )

[node name="StoneTilemap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -786427, 0, 0, -786426, 0, 0, -786425, 0, 0, -786424, 0, 0, -786423, 0, 0, -786422, 0, 0, -786421, 0, 0, -786420, 0, 0, -786419, 0, 0, -786418, 0, 0, -720891, 0, 0, -720890, 0, 0, -720889, 0, 0, -720888, 0, 0, -720887, 0, 0, -720886, 0, 0, -720885, 0, 0, -720884, 1, 0, -720883, 0, 0, -720882, 0, 0, -655355, 0, 0, -655354, 0, 0, -655353, 0, 0, -655352, 0, 0, -655351, 0, 0, -655350, 0, 0, -655349, 0, 0, -655348, 0, 0, -655347, 0, 0, -655346, 0, 0, -589819, 0, 0, -589818, 0, 0, -589817, 0, 0, -589816, 1, 0, -589815, 0, 0, -589814, 1, 0, -589813, 0, 0, -589812, 0, 0, -589811, 0, 0, -589810, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 0, 0, -524278, 0, 0, -524277, 0, 0, -524276, 0, 0, -524275, 0, 0, -524274, 1, 0, -458747, 1, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 1, 0, -458740, 0, 0, -458739, 0, 0, -458738, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -393207, 0, 0, -393206, 0, 0, -393205, 0, 0, -393204, 0, 0, -393203, 0, 0, -393202, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 1, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 1, 0, -327666, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, 0, -262130, 0, 0, -196603, 1, 0, -196602, 1, 0, -196601, 0, 0, -196600, 0, 0, -196599, 1, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -131067, 1, 0, -131066, 1, 0, -131065, 0, 0, -131064, 0, 0, -131063, 1, 0, -131062, 0, 0, -131061, 0, 0, -131060, 1, 0, -131059, 0, 0, -131058, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 1, 0, 65549, 0, 0, 65550, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 1, 0, 196617, 0, 0, 196618, 1, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 1, 0, 327685, 1, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 1, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 1, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 1, 0, 458766, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 589829, 1, 0, 589830, 1, 0, 589831, 0, 0, 589832, 0, 0, 589833, 1, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 655365, 1, 0, 655366, 1, 0, 655367, 0, 0, 655368, 0, 0, 655369, 1, 0, 655370, 0, 0, 655371, 0, 0, 655372, 1, 0, 655373, 0, 0, 655374, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0 )

[node name="GardenTilemap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -786427, 0, 1, -786426, 0, 196610, -786425, 0, 196610, -786424, 0, 196611, -786421, 0, 196609, -786420, 0, 196610, -786419, 0, 196610, -786418, 0, 3, -720891, 0, 65536, -720882, 0, 65536, -655355, 0, 65536, -655346, 0, 65536, -589819, 0, 65536, -589810, 0, 65536, -524283, 0, 65536, -524274, 0, 65536, -458747, 0, 65536, -458744, 0, 8, -458743, 0, 11, -458738, 0, 65536, -393211, 0, 65536, -393208, 0, 65544, -393207, 0, 131083, -393202, 0, 65536, -327675, 0, 65536, -327672, 0, 65544, -327671, 0, 131083, -327666, 0, 65536, -262139, 0, 65536, -262136, 0, 65544, -262135, 0, 131083, -262130, 0, 65536, -196603, 0, 65536, -196600, 0, 65544, -196599, 0, 65542, -196598, 0, 10, -196597, 0, 10, -196596, 0, 10, -196595, 0, 10, -196594, 0, 65543, -131067, 0, 65536, -131064, 0, 196616, -131063, 0, 196617, -131062, 0, 196617, -131061, 0, 196617, -131060, 0, 196617, -131059, 0, 196617, -131058, 0, 131079, -65531, 0, 65536, -65522, 0, 65536, 5, 0, 65536, 14, 0, 65536, 65541, 0, 65540, 65542, 0, 10, 65543, 0, 10, 65544, 0, 11, 65547, 0, 8, 65548, 0, 10, 65549, 0, 10, 65550, 0, 65543, 131077, 0, 65544, 131078, 0, 131081, 131079, 0, 131081, 131080, 0, 131083, 131083, 0, 65544, 131084, 0, 131081, 131085, 0, 131081, 131086, 0, 131083, 196613, 0, 131076, 196614, 0, 196617, 196615, 0, 196617, 196616, 0, 196619, 196619, 0, 196616, 196620, 0, 196617, 196621, 0, 196617, 196622, 0, 131079, 262149, 0, 65536, 262158, 0, 65536, 327685, 0, 65536, 327694, 0, 65536, 393221, 0, 65536, 393224, 0, 8, 393225, 0, 10, 393226, 0, 10, 393227, 0, 11, 393230, 0, 65536, 458757, 0, 65536, 458760, 0, 196616, 458761, 0, 196617, 458762, 0, 196617, 458763, 0, 196619, 458766, 0, 65536, 524293, 0, 65536, 524302, 0, 65536, 589829, 0, 65540, 589830, 0, 11, 589837, 0, 8, 589838, 0, 65543, 655365, 0, 65544, 655366, 0, 65542, 655367, 0, 11, 655372, 0, 8, 655373, 0, 65541, 655374, 0, 131083, 720901, 0, 196616, 720902, 0, 196617, 720903, 0, 196614, 720904, 0, 196611, 720907, 0, 196609, 720908, 0, 196613, 720909, 0, 196617, 720910, 0, 196619 )

[node name="Bookshelves" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Carpet" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -851959, 0, 8, -851958, 0, 11, -786423, 0, 65544, -786422, 0, 131083, -720887, 0, 65544, -720886, 0, 65542, -720885, 0, 11, -655354, 0, 8, -655353, 0, 10, -655352, 0, 10, -655351, 0, 65541, -655350, 0, 131081, -655349, 0, 131083, -589818, 0, 65544, -589817, 0, 131078, -589816, 0, 196617, -589815, 0, 196617, -589814, 0, 196617, -589813, 0, 196619, -524282, 0, 65544, -524281, 0, 131083, -458746, 0, 196616, -458745, 0, 196619, 9, 0, 8, 10, 0, 11, 65545, 0, 65544, 65546, 0, 131083, 131081, 0, 65544, 131082, 0, 131083, 196617, 0, 65544, 196618, 0, 131083, 262153, 0, 196616, 262154, 0, 196619, 589833, 0, 8, 589834, 0, 11, 655369, 0, 196616, 655370, 0, 196619 )

[node name="Warp" type="Node2D" parent="."]
position = Vector2( 160, -200 )
script = ExtResource( 23 )
sceneName = "res://levels/four.tscn"

[node name="Area1" type="Area2D" parent="Warp"]
position = Vector2( -8, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Warp/Area1"]
shape = SubResource( 5 )

[node name="Area2" type="Area2D" parent="Warp"]
position = Vector2( 8, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Warp/Area2"]
shape = SubResource( 6 )

[node name="Stairs" type="Node2D" parent="."]
modulate = Color( 0.517647, 0.494118, 0.529412, 1 )
position = Vector2( 160, 184 )
rotation = 3.14159

[node name="Left" type="Sprite" parent="Stairs"]
position = Vector2( -8, 0 )
texture = ExtResource( 21 )

[node name="Right" type="Sprite" parent="Stairs"]
position = Vector2( 8, 0 )
texture = ExtResource( 21 )

[node name="Label" type="Label" parent="."]
margin_left = 128.0
margin_top = 96.0
margin_right = 212.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 7 )
text = "Garden"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grave" type="Node2D" parent="."]
position = Vector2( 200, -104 )

[node name="Sprite" type="Sprite" parent="Grave"]
texture = ExtResource( 27 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 120, -56 )
script = ExtResource( 12 )

[node name="Camera2D" type="Camera2D" parent="player"]
current = true
limit_left = 0
limit_top = -192
limit_right = 320
limit_bottom = 192

[node name="Light2D" type="Light2D" parent="player"]
visible = false
texture = ExtResource( 10 )
shadow_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="player"]
position = Vector2( 0, -12 )
frames = SubResource( 9 )
animation = "idle"
speed_scale = 0.5

[node name="Tween" type="Tween" parent="player"]

[node name="playerArrow" type="Sprite" parent="."]
visible = false
modulate = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
position = Vector2( 112, -88 )
rotation = 3.14159
texture = ExtResource( 26 )

[node name="Grand" type="Node2D" parent="."]
position = Vector2( 184, -104 )

[node name="Sprite" type="Sprite" parent="Grand"]
position = Vector2( -0.314972, -13.0397 )
texture = ExtResource( 25 )

[node name="grandArrow" type="Sprite" parent="."]
visible = false
modulate = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
position = Vector2( 184, -88 )
rotation = -3.14159
texture = ExtResource( 26 )

[node name="Overhead" type="TileMap" parent="."]
tile_set = SubResource( 10 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextBox" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterTimer" type="Timer" parent="CanvasLayer/TextBox"]
wait_time = 0.04

[node name="ColorRect_Border" type="ColorRect" parent="CanvasLayer/TextBox"]
margin_left = 8.0
margin_top = 112.0
margin_right = 312.0
margin_bottom = 184.0
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2_inner" type="ColorRect" parent="CanvasLayer/TextBox"]
margin_left = 16.0
margin_top = 120.0
margin_right = 304.0
margin_bottom = 176.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/TextBox"]
margin_left = 20.0
margin_top = 124.0
margin_right = 300.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 11 )
text = "Testing"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nextLabel" type="Label" parent="CanvasLayer/TextBox"]
margin_left = 256.0
margin_top = 160.0
margin_right = 296.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 12 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Walls" type="TileMap" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.27451 )
tile_set = SubResource( 13 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -786427, 0, 0, -786426, 0, 0, -786425, 0, 0, -786424, 0, 0, -786421, 0, 0, -786420, 0, 0, -786419, 0, 0, -786418, 0, 0, -720891, 0, 0, -720882, 0, 0, -655355, 0, 0, -655346, 0, 0, -589819, 0, 0, -589810, 0, 0, -524283, 0, 0, -524276, 0, 0, -524274, 0, 0, -458747, 0, 0, -458744, 0, 0, -458743, 0, 0, -458740, 0, 0, -458738, 0, 0, -393211, 0, 0, -393208, 0, 0, -393207, 0, 0, -393202, 0, 0, -327675, 0, 0, -327672, 0, 0, -327671, 0, 0, -327666, 0, 0, -262139, 0, 0, -262136, 0, 0, -262135, 0, 0, -262130, 0, 0, -196603, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -131067, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -65531, 0, 0, -65522, 0, 0, 5, 0, 0, 14, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 262149, 0, 0, 262158, 0, 0, 327685, 0, 0, 327694, 0, 0, 393221, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393230, 0, 0, 458757, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458766, 0, 0, 524293, 0, 0, 524302, 0, 0, 589829, 0, 0, 589830, 0, 0, 589837, 0, 0, 589838, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0 )

[node name="TalkTrigger" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="TalkTrigger"]
position = Vector2( 104, -104 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TalkTrigger/Area2D"]
shape = SubResource( 14 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TalkTrigger/Area2D"]
position = Vector2( 16, 0 )
shape = SubResource( 14 )
[connection signal="body_entered" from="Warp/Area1" to="Warp" method="_on_Area1_body_entered"]
[connection signal="body_entered" from="Warp/Area2" to="Warp" method="_on_Area2_body_entered"]
[connection signal="tween_completed" from="player/Tween" to="player" method="_on_Tween_tween_completed"]
[connection signal="text_complete" from="CanvasLayer/TextBox" to="." method="_on_TextBox_text_complete"]
[connection signal="timeout" from="CanvasLayer/TextBox/CharacterTimer" to="CanvasLayer/TextBox" method="_on_CharacterTimer_timeout"]
[connection signal="body_entered" from="TalkTrigger/Area2D" to="." method="_on_Area2D_body_entered"]
